Revert "border fixes"
This reverts commit 956155c293f7fe1e40d789db8cacc3b57fdbc5ee.

--- a/public/css/tips.css
+++ b/public/css/tips.css
@@ -49,7 +49,7 @@ table.pre pre {
 } 
 table.pre, pre.fssnip, pre {
   line-height:13pt;
-  border:1px solid #475b5f;
+  border:1px solid #d8d8d8;
   border-collapse:separate;
   white-space:pre;
   font: 9pt 'Droid Sans Mono',consolas,monospace;
