--- a/public/css/tips.css
+++ b/public/css/tips.css
@@ -74,6 +74,9 @@ table.pre td {
 table.pre td.lines {
   width:30px;
 }
+td.snippet {
+   border:1px solid #212d30; 
+}
 
 /*-------------------------------------------------------------------------- 
   Formatting for page & standard document content
