--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,11 @@
       {% endfor %}
       <a class="sidebar-nav-item" href="{{ site.url }}/atom.xml">RSS</a>
     </nav>
-
+    <div class="sidebar-social">
+        <a href="https://twitter.com/share/tweet?url={{ site.url }}{{ page.url }}&text={{ page.title }}&via=colinbul" target="_blank">
+            <img width="48" height="48" src="{{ site.baseurl }}public/Twitter_logo_white_48.png"/>
+        </a>    
+    </div>
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
