--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <div class="page">
-  <h1 class="page-title">{{ page.title }}</h1>
-  {{ content }}
+    <h1 class="page-title">{{ page.title }}</h1>
+    {{ content }}
+    <small>Published: {{ post.date | date_to_string }}</small>
 </div>
