--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,4 +5,9 @@ layout: default
 <div class="page">
     <h1 class="page-title">{{ page.title }}</h1>
     {{ content }}
+    <div>
+        <a href="https://twitter.com/share/tweet?url={{ site.url }}{{ page.url }}&text={{ page.title }}&via=colinbul" target="_blank">
+            <img alt="tweet-share" src="{{ site.baseurl }}public/Twitter_logo_blue_48.png" />
+        </a>
+    </div>
 </div>
