--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="page">
     <h1 class="page-title">{{ page.title }}</h1>
-    <span class="post-date">{{ page.date | date_to_string }}</span>
+    <span class="post-date">{{ page.date | date: "%B %d, %Y" }}</span>
     {{ content }}
     <div>
         <a href="https://twitter.com/share/tweet?url={{ site.url }}{{ page.url }}&text={{ page.title }}&via=colinbul" target="_blank">
