--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
     <span class="post-date">{{ page.date | date: "%B %d, %Y" }}</span>
     {{ content }}
     <div>
-        <a href="https://twitter.com/share/tweet?url={{ site.url }}{{ page.url }}&text={{ page.title }}&via=colinbul" target="_blank">
+        <a href="https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&text={{ page.title }}&via=colinbul" target="_blank">
             <img alt="tweet-share" src="{{ site.baseurl }}public/Twitter_logo_blue_48.png" />
         </a>
     </div>
