--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,25 +9,32 @@
       <p class="lead">{{ site.description }}</p>
     </div>
 
-    <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
+      <nav class="sidebar-nav">
+          <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
 
-      {% comment %}
-        The code below dynamically generates a sidebar nav of pages with
-        `layout: page` in the front-matter. See readme for usage.
-      {% endcomment %}
+          {% comment %}
+          The code below dynamically generates a sidebar nav of pages with
+          `layout: page` in the front-matter. See readme for usage.
+          {% endcomment %}
 
-      {% assign pages_list = site.pages %}
-      {% for node in pages_list %}
-        {% if node.title != null %}
+          {% assign pages_list = site.pages %}
+          {% for node in pages_list %}
+          {% if node.title != null %}
           {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
           {% endif %}
-        {% endif %}
-      {% endfor %}
-      <a class="sidebar-nav-item" href="{{ site.url }}/atom.xml">RSS</a>
-    </nav>
-
+          {% endif %}
+          {% endfor %}
+          <a class="sidebar-nav-item" href="{{ site.url }}/atom.xml">RSS</a>
+      </nav>
+      <div>
+          <a href="http://www.github.com/colinbull">
+              <img href="{{ site.baseurl }}public/GitHub-Mark-Light-32px.png"/>
+          </a>
+          <a href="https://twitter.com/colinbul">
+              <img href="{{ site.baseurl }}public/Twitter_logo_white_32.png" />
+          </a>
+      </div>
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
