--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,10 +29,10 @@
       </nav>
       <div>
           <a href="http://www.github.com/colinbull">
-              <img href="{{ site.baseurl }}public/GitHub-Mark-Light-32px.png"/>
+              <img src="{{ site.baseurl }}public/GitHub-Mark-Light-32px.png"/>
           </a>
           <a href="https://twitter.com/colinbul">
-              <img href="{{ site.baseurl }}public/Twitter_logo_white_32.png" />
+              <img src="{{ site.baseurl }}public/Twitter_logo_white_32.png" />
           </a>
       </div>
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
