--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -135,6 +135,7 @@ a.sidebar-nav-item:focus {
  */
 
 .content {
+    max-width: 100%;
     padding-top: 4rem;
     padding-bottom: 4rem;
 }
@@ -149,7 +150,7 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 64em) {
     .content {
-        max-width: 100px;
+        max-width: 100%;
         margin-left: 22rem;
         margin-right: 4rem;
     }
